--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   persistent_bottom_nav_bar_v2:
   titled_navigation_bar: ^5.0.0-nullsafety.0
   expandable:
+  firebase_messaging:
+  overlay_support:
+  flutter_local_notifications:
+
 
 
 dev_dependencies:
